fix: updating z-index value for loading component

--- a/frontend/src/views/Seedlot/SeedlotRegFormClassA/styles.scss
+++ b/frontend/src/views/Seedlot/SeedlotRegFormClassA/styles.scss
@@ -1,3 +1,7 @@
 .seedlot-registration-page {
   padding-bottom: 2.5rem;
+
+  .loading-status-component {
+    z-index: 10000;
+  }
 }
