--- a/frontend/src/views/Seedlot/SeedlotReview/styles.scss
+++ b/frontend/src/views/Seedlot/SeedlotReview/styles.scss
@@ -83,4 +83,8 @@
       width: -webkit-fill-available;
     }
   }
+
+  .loading-status-component {
+    z-index: 10000;
+  }
 }
